[gd_scene load_steps=12 format=2]

[ext_resource path="res://autotile/terrain_simple.tscn" type="PackedScene" id=1]
[ext_resource path="res://fighting/dude/dude.tscn" type="PackedScene" id=2]
[ext_resource path="res://test/fighting/tilemap.tscn" type="PackedScene" id=3]
[ext_resource path="res://fighting/malovich/malovich.tscn" type="PackedScene" id=4]
[ext_resource path="res://textbox/textbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/fighting/malovich/malovich_fight.gd" type="Script" id=6]
[ext_resource path="res://overworld/tilemap/trigger/scene_change_trigger.tscn" type="PackedScene" id=7]
[ext_resource path="res://HUD/HUD.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 4.49159, 7.49795 )

[sub_resource type="RectangleShape2D" id=2]
resource_local_to_scene = true
extents = Vector2( 5, 7 )

[sub_resource type="RectangleShape2D" id=3]
resource_local_to_scene = true
extents = Vector2( 4, 7.5 )

[node name="fighting_scene" type="Node2D"]
script = ExtResource( 6 )

[node name="terrain_simple" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( 0, 0, 589824, 1, 0, 589824, 2, 0, 589824, 3, 0, 589824, 4, 0, 589824, 5, 0, 589824, 6, 0, 589824, 7, 0, 589824, 8, 0, 589824, 9, 0, 589824, 10, 0, 589824, 11, 0, 589824, 12, 0, 589824, 13, 0, 589824, 14, 0, 589824, 15, 0, 589824, 16, 0, 589824, 17, 0, 589824, 18, 0, 589824, 19, 0, 589824, 65536, 0, 589824, 65537, 0, 589824, 65538, 0, 589824, 65539, 0, 589824, 65540, 0, 589824, 65541, 0, 589824, 65542, 0, 589824, 65543, 0, 589824, 65544, 0, 589824, 65545, 0, 589824, 65546, 0, 589824, 65547, 0, 589824, 65548, 0, 589824, 65549, 0, 589824, 65550, 0, 589824, 65551, 0, 589824, 65552, 0, 589824, 65553, 0, 589824, 65554, 0, 589824, 65555, 0, 589824, 131072, 0, 589824, 131073, 0, 589824, 131074, 0, 589824, 131075, 0, 589824, 131076, 0, 589824, 131077, 0, 589824, 131078, 0, 589824, 131079, 0, 589824, 131080, 0, 589824, 131081, 0, 589824, 131082, 0, 589824, 131083, 0, 589824, 131084, 0, 589824, 131085, 0, 589824, 131086, 0, 589824, 131087, 0, 589824, 131088, 0, 589824, 131089, 0, 589824, 131090, 0, 589824, 131091, 0, 589824, 196608, 0, 589824, 196609, 0, 589824, 196610, 0, 589824, 196611, 0, 589824, 196612, 0, 589824, 196613, 0, 589824, 196614, 0, 589824, 196615, 0, 589824, 196616, 0, 589824, 196617, 0, 589824, 196618, 0, 589824, 196619, 0, 589824, 196620, 0, 589824, 196621, 0, 589824, 196622, 0, 589824, 196623, 0, 589824, 196624, 0, 589824, 196625, 0, 589824, 196626, 0, 589824, 196627, 0, 589824, 262144, 0, 589824, 262145, 0, 589824, 262146, 0, 589824, 262147, 0, 589824, 262148, 0, 589824, 262149, 0, 589824, 262150, 0, 589824, 262151, 0, 589824, 262152, 0, 589824, 262153, 0, 589824, 262154, 0, 589824, 262155, 0, 589824, 262156, 0, 589824, 262157, 0, 589824, 262158, 0, 589824, 262159, 0, 589824, 262160, 0, 589824, 262161, 0, 589824, 262162, 0, 589824, 262163, 0, 589824, 327680, 0, 589824, 327681, 0, 589824, 327682, 0, 589824, 327683, 0, 589824, 327684, 0, 589824, 327685, 0, 589824, 327686, 0, 589824, 327687, 0, 589824, 327688, 0, 589824, 327689, 0, 589824, 327690, 0, 589824, 327691, 0, 589824, 327692, 0, 589824, 327693, 0, 589824, 327694, 0, 589824, 327695, 0, 589824, 327696, 0, 589824, 327697, 0, 589824, 327698, 0, 589824, 327699, 0, 589824, 393216, 0, 589824, 393217, 0, 589824, 393218, 0, 589824, 393219, 0, 589824, 393220, 0, 589824, 393221, 0, 589824, 393222, 0, 589824, 393223, 0, 589824, 393224, 0, 589824, 393225, 0, 589824, 393226, 0, 589824, 393227, 0, 589824, 393228, 0, 589824, 393229, 0, 589824, 393230, 0, 589824, 393231, 0, 589824, 393232, 0, 589824, 393233, 0, 589824, 393234, 0, 589824, 393235, 0, 589824, 458752, 0, 589824, 458753, 0, 786433, 458754, 0, 786433, 458755, 0, 786433, 458756, 0, 786433, 458757, 0, 786433, 458758, 0, 786433, 458759, 0, 786433, 458760, 0, 786433, 458761, 0, 786433, 458762, 0, 786433, 458763, 0, 786433, 458764, 0, 786433, 458765, 0, 786433, 458766, 0, 786433, 458767, 0, 786433, 458768, 0, 786433, 458769, 0, 786433, 458770, 0, 786433, 458771, 0, 589824, 524288, 0, 589824, 524289, 0, 786433, 524290, 0, 786433, 524291, 0, 786433, 524292, 0, 786433, 524293, 0, 786433, 524294, 0, 786433, 524295, 0, 786433, 524296, 0, 786433, 524297, 0, 786433, 524298, 0, 786433, 524299, 0, 786433, 524300, 0, 786433, 524301, 0, 786433, 524302, 0, 786433, 524303, 0, 786433, 524304, 0, 786433, 524305, 0, 786433, 524306, 0, 786433, 524307, 0, 589824, 589824, 0, 589824, 589825, 0, 786433, 589826, 0, 786433, 589827, 0, 786433, 589828, 0, 786433, 589829, 0, 786433, 589830, 0, 786433, 589831, 0, 786433, 589832, 0, 786433, 589833, 0, 786433, 589834, 0, 786433, 589835, 0, 786433, 589836, 0, 786433, 589837, 0, 786433, 589838, 0, 786433, 589839, 0, 786433, 589840, 0, 786433, 589841, 0, 786433, 589842, 0, 786433, 589843, 0, 589824, 655360, 0, 589824, 655361, 0, 786433, 655362, 0, 786433, 655363, 0, 786433, 655364, 0, 786433, 655365, 0, 786433, 655366, 0, 786433, 655367, 0, 786433, 655368, 0, 786433, 655369, 0, 786433, 655370, 0, 786433, 655371, 0, 786433, 655372, 0, 786433, 655373, 0, 786433, 655374, 0, 786433, 655375, 0, 786433, 655376, 0, 786433, 655377, 0, 786433, 655378, 0, 786433, 655379, 0, 589824, 720896, 0, 589824, 720897, 0, 786433, 720898, 0, 786433, 720899, 0, 786433, 720900, 0, 786433, 720901, 0, 786433, 720902, 0, 786433, 720903, 0, 786433, 720904, 0, 786433, 720905, 0, 786433, 720906, 0, 786433, 720907, 0, 786433, 720908, 0, 786433, 720909, 0, 786433, 720910, 0, 786433, 720911, 0, 786433, 720912, 0, 786433, 720913, 0, 786433, 720914, 0, 786433, 720915, 0, 589824, 786432, 0, 589824, 786433, 0, 589824, 786434, 0, 589824, 786435, 0, 589824, 786436, 0, 589824, 786437, 0, 589824, 786438, 0, 589824, 786439, 0, 589824, 786440, 0, 589824, 786441, 0, 589824, 786442, 0, 589824, 786443, 0, 589824, 786444, 0, 589824, 786445, 0, 589824, 786446, 0, 589824, 786447, 0, 589824, 786448, 0, 589824, 786449, 0, 589824, 786450, 0, 589824, 786451, 0, 589824, 851968, 0, 589824, 851969, 0, 589824, 851970, 0, 589824, 851971, 0, 589824, 851972, 0, 589824, 851973, 0, 589824, 851974, 0, 589824, 851975, 0, 589824, 851976, 0, 589824, 851977, 0, 589824, 851978, 0, 589824, 851979, 0, 589824, 851980, 0, 589824, 851981, 0, 589824, 851982, 0, 589824, 851983, 0, 589824, 851984, 0, 589824, 851985, 0, 589824, 851986, 0, 589824, 851987, 0, 589824, 917504, 0, 589824, 917505, 0, 589824, 917506, 0, 589824, 917507, 0, 589824, 917508, 0, 589824, 917509, 0, 589824, 917510, 0, 589824, 917511, 0, 589824, 917512, 0, 589824, 917513, 0, 589824, 917514, 0, 589824, 917515, 0, 589824, 917516, 0, 589824, 917517, 0, 589824, 917518, 0, 589824, 917519, 0, 589824, 917520, 0, 589824, 917521, 0, 589824, 917522, 0, 589824, 917523, 0, 589824, 983040, 0, 589824, 983041, 0, 589824, 983042, 0, 589824, 983043, 0, 589824, 983044, 0, 589824, 983045, 0, 589824, 983046, 0, 589824, 983047, 0, 589824, 983048, 0, 589824, 983049, 0, 589824, 983050, 0, 589824, 983051, 0, 589824, 983052, 0, 589824, 983053, 0, 589824, 983054, 0, 589824, 983055, 0, 589824, 983056, 0, 589824, 983057, 0, 589824, 983058, 0, 589824, 983059, 0, 589824, 1048576, 0, 589824, 1048577, 0, 589824, 1048578, 0, 589824, 1048579, 0, 589824, 1048580, 0, 589824, 1048581, 0, 589824, 1048582, 0, 589824, 1048583, 0, 589824, 1048584, 0, 589824, 1048585, 0, 589824, 1048586, 0, 589824, 1048587, 0, 589824, 1048588, 0, 589824, 1048589, 0, 589824, 1048590, 0, 589824, 1048591, 0, 589824, 1048592, 0, 589824, 1048593, 0, 589824, 1048594, 0, 589824, 1048595, 0, 589824, 1114112, 0, 589824, 1114113, 0, 589824, 1114114, 0, 589824, 1114115, 0, 589824, 1114116, 0, 589824, 1114117, 0, 589824, 1114118, 0, 589824, 1114119, 0, 589824, 1114120, 0, 589824, 1114121, 0, 589824, 1114122, 0, 589824, 1114123, 0, 589824, 1114124, 0, 589824, 1114125, 0, 589824, 1114126, 0, 589824, 1114127, 0, 589824, 1114128, 0, 589824, 1114129, 0, 589824, 1114130, 0, 589824, 1114131, 0, 589824 )

[node name="terrain" parent="." instance=ExtResource( 3 )]
visible = false
collision_layer = 2
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 458752, 0, 0, 458771, 0, 0, 524288, 0, 0, 524307, 0, 0, 589824, 0, 0, 589843, 0, 0, 655360, 0, 0, 655379, 0, 0, 720896, 0, 0, 720915, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 917504, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 917522, 0, 0, 917523, 0, 0, 983040, 0, 0, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, 983058, 0, 0, 983059, 0, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048595, 0, 0, 1114112, 0, 0, 1114113, 0, 0, 1114114, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0 )

[node name="malovich" parent="." instance=ExtResource( 4 )]
position = Vector2( 272, 184 )
max_health = 500.0
gravity = 500.0
dir = -1.0

[node name="CollisionShape2D" parent="malovich/pivot/hitbox/jab" index="0"]
shape = SubResource( 1 )

[node name="CollisionShape2D" parent="malovich/pivot/hitbox/ram" index="0"]
shape = SubResource( 2 )

[node name="CollisionShape2D" parent="malovich/pivot/hurtbox/main" index="0"]
shape = SubResource( 3 )

[node name="CollisionShape2D" parent="malovich" index="2"]
shape = SubResource( 3 )

[node name="healthbar" parent="malovich" index="6"]
visible = false

[node name="dude" parent="." instance=ExtResource( 2 )]
position = Vector2( 38.5, 185 )

[node name="textbox" parent="." instance=ExtResource( 5 )]

[node name="scene_change" parent="." instance=ExtResource( 7 )]
position = Vector2( 232, 88 )
to = 9
relative_spawn_pos = false
is_world_coords = false
wait_step = false

[node name="spawn_pos" parent="scene_change" index="0"]
position = Vector2( 12, 7 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HUD" parent="." instance=ExtResource( 8 )]

[node name="healthbar2" parent="HUD/flip_node" index="0"]
visible = true

[connection signal="dead" from="malovich" to="." method="player_win"]
[connection signal="health_changed" from="malovich" to="HUD/flip_node/healthbar2" method="_on_health_changed"]
[connection signal="dead" from="dude" to="." method="player_lose"]
[connection signal="health_changed" from="dude" to="HUD/healthbar" method="_on_health_changed"]
[connection signal="text_display_finished" from="textbox" to="." method="_on_textbox_text_display_finished"]
[connection signal="text_display_started" from="textbox" to="." method="_on_textbox_text_display_started"]

[editable path="malovich"]
[editable path="scene_change"]
[editable path="HUD"]
